--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -14,9 +14,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Fetch latest data
         run: |-
-          curl -O "https://www1.nyc.gov/assets/nypd/downloads/pdf/public_information/public-pguide[1-3].pdf"
-          curl -O "https://www1.nyc.gov/assets/nypd/downloads/pdf/public_information/public-adminguide[1-2].pdf"
-          curl -O https://www1.nyc.gov/assets/nypd/downloads/pdf/public_information/Update.pdf
+          curl -O "https://www.nyc.gov/assets/nypd/downloads/pdf/public_information/public-pguide[1-3].pdf"
+          curl -O "https://www.nyc.gov/assets/nypd/downloads/pdf/public_information/public-adminguide[1-2].pdf"
+          curl -O https://www.nyc.gov/assets/nypd/downloads/pdf/public_information/update.pdf
       - name: Commit and push if it changed
         run: |-
           git config user.name "Automated"
