--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -16,7 +16,10 @@ jobs:
         run: |-
           curl -O "https://www.nyc.gov/assets/nypd/downloads/pdf/public_information/public-pguide[1-3].pdf"
           curl -O "https://www.nyc.gov/assets/nypd/downloads/pdf/public_information/public-adminguide[1-2].pdf"
-          curl -O https://www.nyc.gov/assets/nypd/downloads/pdf/public_information/update.pdf
+          rm update.pdf Update.pdf Update1.pdf
+          curl --fail -O https://www.nyc.gov/assets/nypd/downloads/pdf/public_information/update.pdf
+          curl --fail -O https://www.nyc.gov/assets/nypd/downloads/pdf/public_information/Update.pdf
+          curl --fail -O https://www.nyc.gov/assets/nypd/downloads/pdf/public_information/Update1.pdf
       - name: Commit and push if it changed
         run: |-
           git config user.name "Automated"
