Another try at handling update files.

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -16,15 +16,11 @@ jobs:
         run: |-
           curl -O "https://www.nyc.gov/assets/nypd/downloads/pdf/public_information/public-pguide[1-3].pdf"
           curl -O "https://www.nyc.gov/assets/nypd/downloads/pdf/public_information/public-adminguide[1-2].pdf"
-      - name: Fetch update.pdf
-        continue-on-error: true
-        run: |-
-          rm update.pdf Update.pdf Update1.pdf
-          curl --fail -O https://www.nyc.gov/assets/nypd/downloads/pdf/public_information/update.pdf
-          curl --fail -O https://www.nyc.gov/assets/nypd/downloads/pdf/public_information/Update.pdf
-          curl --fail -O https://www.nyc.gov/assets/nypd/downloads/pdf/public_information/Update1.pdf
-      - name: Validate update.pdf
-        run: test -f update.pdf -o -f Update.pdf -o -f Update1.pdf
+          rm update.pdf Update.pdf Update1.pdf || true
+          curl --fail -O https://www.nyc.gov/assets/nypd/downloads/pdf/public_information/update.pdf || true
+          curl --fail -O https://www.nyc.gov/assets/nypd/downloads/pdf/public_information/Update.pdf || true
+          curl --fail -O https://www.nyc.gov/assets/nypd/downloads/pdf/public_information/Update1.pdf || true
+          test -f update.pdf -o -f Update.pdf -o -f Update1.pdf
       - name: Commit and push if it changed
         run: |-
           git config user.name "Automated"
