--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -14,8 +14,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Fetch latest data
         run: |-
-          curl -O "https://www.nyc.gov/assets/nypd/downloads/pdf/public_information/public-pguide[1-3].pdf"
+          curl -O "https://www.nyc.gov/assets/nypd/downloads/pdf/public_information/public-pguide[1-4].pdf"
           curl -O "https://www.nyc.gov/assets/nypd/downloads/pdf/public_information/public-adminguide[1-2].pdf"
+          curl -O "https://www.nyc.gov/assets/nypd/downloads/pdf/public_information/toc1.pdf"
           rm update.pdf Update.pdf Update1.pdf || true
           curl --fail -O https://www.nyc.gov/assets/nypd/downloads/pdf/public_information/update.pdf || true
           curl --fail -O https://www.nyc.gov/assets/nypd/downloads/pdf/public_information/Update.pdf || true
